-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 16.0.0-beta1
-
-
601648a5c (16.0)
QtCreator starts slowing down all around crashes after running an application with a vast amount of output logs for a while.
Example app: https://git.qt.io/hancerli/output_panel_tester#
For Gerrit Dashboard: QTCREATORBUG-32371 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
621104,4 | Core: Do not assume that the application output size fits in an int | 16.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |