Core: Do not assume that the application output size fits in an int

If people try really hard, they can produce larger output.

Fixes: QTCREATORBUG-32371
Change-Id: I0f683026d684875fa054fdff15a7a0a334a179eb
Reviewed-by: Christian Stenger <christian.stenger@qt.io>